# PRP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
docs/: auto-plan-mode.md  command-arguments-guide.md  getting-started.md  prp-methodology.md
scripts/: init-project.sh
templates/: .env.example  install.sh  pyproject.toml  start.sh
templates/.claude/: auto_plan_mode.txt  settings.local.json
templates/.claude/commands/: README.md  auto-plan.md  code-review.md  create-tasks.md  fix-issue.md  quick-fix.md  refactor.md  security-check.md  status-check.md  test-application.md  ui-check.md  update-docs.md
