[project]
name = "prp-project"
version = "1.0.0"
description = "PRP Framework Project"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core Python packages
    "python-dotenv>=1.0.0",
    "pydantic>=2.11.0",
    
    # Google Cloud & ADK (uncomment as needed)
    # "google-adk[eval]>=1.5.0",
    # "google-cloud-aiplatform[adk,agent-engines]>=1.93.0",
    
    # Data Science & ML (uncomment as needed)
    # "pandas>=2.0.0",
    # "numpy>=1.24.0",
    # "scikit-learn>=1.0.0",
    # "matplotlib>=3.5.0",
    # "seaborn>=0.11.0",
    # "plotly>=5.0.0",
    
    # Web Frameworks (choose one)
    # "flask>=2.3.0",
    # "fastapi>=0.100.0",
    # "uvicorn>=0.23.0",  # For FastAPI
    
    # Database drivers (uncomment as needed)
    # "neo4j>=5.0.0",
    # "sqlalchemy>=2.0.0",
    # "asyncpg>=0.28.0",  # PostgreSQL async
    
    # Utility packages
    # "requests>=2.31.0",
    # "httpx>=0.24.0",
    # "click>=8.0.0",  # CLI tools
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
security = [
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "pip-audit>=2.6.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
exclude = ["tests*"]

# ADK Agent entry point (uncomment if using Google ADK)
# [project.entry-points."google.adk.agents"]
# your_agent = "src.agent:deployable_agent"

[tool.pytest.ini_options]
console_output_style = "progress"
addopts = "-vv -s --cov=src"
testpaths = ["tests/"]
log_level = "INFO"
log_cli = true
log_auto_indent = true

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # Skip assert_used test